@@ -2,6 +2,10 @@
 - fix to parsing of code/expression blocks to insure that non-ascii characters, combined
 with a template that indicates a non-standard encoding, are expanded into backslash-escaped 
 glyphs before being AST parsed [ticket:11]
+- added module_filename argument to Template to allow specification of a specific module
+file
+- added modulename_callable to TemplateLookup to allow a function to determine module filenames
+(takes filename, uri arguments).  used for [ticket:14]
 
 0.1.1
 - buffet plugin supports string-based templates, allows ToscaWidgets to work [ticket:8]
